# blindpay-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_OVERVIEW.md  README.md  USAGE.md
examples/: basic.rs  complete.rs
src/: client.rs  error.rs  lib.rs  types.rs
src/resources/: api_keys.rs  available.rs  bank_accounts.rs  instances.rs  mod.rs  partner_fees.rs  payins.rs  payouts.rs  quotes.rs  receivers.rs  terms_of_service.rs  virtual_accounts.rs  webhooks.rs
src/resources/wallets/: blockchain.rs  mod.rs  offramp.rs
tests/: integration_test.rs
